Fix JDK8 compile issue with module-info-compiler and attempt to fix analyze issue